# minx

./: README.md  affinity.sh  bela.py  jax.pbs  jaxrun.sh  main.py  multijax.sh  mvp.py  pyproject.toml  run.py
minx/: comm.py
minx/net/: modules.py  positional_embeddings.py  sow_lib.py  transformer.py
